# sui

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: main.py
app/agents/: __init__.py  models.py  repository.py  service.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  exception.py  lifespan.py  logger.py
app/db/: __init__.py  base.py  session.py
app/db/models/: users.py
app/entities/agents/: __init__.py  api.py  exceptions.py  models.py  schemas.py  service.py
app/entities/conversations/: __init__.py  api.py  exceptions.py  models.py  repository.py  schemas.py  service.py
app/entities/execution/: __init__.py  api.py  exceptions.py  models.py  repository.py  schemas.py  service.py
app/llms/: __init__.py
app/runtime/: __init__.py
app/sandbox/: __init__.py
app/types/: __init__.py  agents.py  execution.py  messages.py
docs/adr/: v1_design.md
