[project]
name = "forge"
version = "0.1.0"
description = "AI Coding Agent Runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
]
ignore = [
    "E501",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"

strict = true

warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true